2011-01-23 Borut Razem <borut.razem AT gmail.com>

	* sdcc.sln, */*.vcxproj: MSVC 2010 project files cleaning
	* */*.vcxproj.filters: added to svn
	* debugger/mcs51/simi.c: fixed warning C4273: '_environ' : inconsistent dll linkage
	* Merged from trunk

2011-01-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Re-rooting of the tree-decomposition.

2011-01-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Fixed MSVC++ compilation problem, preparations for re-rooting the tree decomposition.

2011-01-23 Borut Razem <borut.razem AT gmail.com>

	* src/avr/avr.vcxproj, src/ds390/ds390.vcxproj, src/hc08/hc08.vcxproj,
	  src/mcs51/mcs51.vcxproj, src/pic14/pic14.vcxproj,
	  src/pic16/pic16.vcxproj, src/xa51/xa51.vcxproj, src/z80/z80.vcxproj:
	  remove /Zm1000 command line option from all projects

2011-01-22 Borut Razem <borut.razem AT gmail.com>

	* all.vcxproj, config.vcxproj, sdas/linksrc/sdld_all.vcxproj,
	  src/avr/avra.vcxproj, src/ds390/ds390a.vcxproj,
	  src/hc08/hc08a.vcxproj, src/mcs51/mcs51a.vcxproj,
	  src/pic14/pic14a.vcxproj, src/pic16/pic16a.vcxproj,
	  src/src.vcxproj, src/xa51/xa51a.vcxproj, src/yacc.vcxproj,
	  src/z80/z80a.vcxproj, support/cpp/sdcppa.vcxproj:
	  fixed Custom Builds

2011-01-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Simplified allocation algorithm by requiring leafs of the tree decomposition to be empty.

2011-01-22 Borut Razem <borut.razem AT gmail.com>

	* src/z80/main.c(598):
	  fixed error C2065: 'false' : undeclared identifier

2011-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp:
	  Fixed vertex iterator / descriptor problem that caused errors in MSVC++.

2011-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/main.c:
	  Disabled forgotten debug message.
